add_library(ExternalField OBJECT BreitHFDecorator.cpp BreitZero.cpp
             EJOperator.cpp FieldShift.cpp Hyperfine.cpp
             NormalMassShiftDecorator.cpp RadiativePotential.cpp
             RPAOperator.cpp RPAOrbital.cpp RPASolver.cpp
             SpecificMassShiftDecorator.cpp Transitions.cpp
             TwoBodySMSOperator.cpp YukawaPotential.cpp
             LorentzInvarianceT2.cpp KineticEnergy.cpp
             NuclearPolarisability.cpp)
